# discord_webhooks_gui

./: .gitignore  README.md  pyproject.toml
discord_webhooks_gui/: Embed.ui  EmbedWindow.py  Field.ui  FieldWindow.py  WebHook.ui  WebhookWindow.py  core.py  webhooks.py
